--- a/style.css
+++ b/style.css
@@ -34,9 +34,11 @@ body,
 }
 #display{
     border: 1px solid gray;
-    height: 150px;
-    width: 400px;
+    height: 250px;
+    width: 215px;
+    padding: 10px;
     margin-top: 25px;
+    overflow-y: auto;
 }
 #game-board{
     border: 3px solid gray;
